src/test/ui/associated-types/bound-lifetime-in-binding-only.ok.stderr
warning: the where-clause bound `for<'a> <Parameterized<'a> as Foo>::Item == &'a i32` is impossible to satisfy
  --> $DIR/bound-lifetime-in-binding-only.rs:67:19
   |
LL |   fn ok3<T>() where for<'a> Parameterized<'a>: Foo<Item=&'a i32> {
   |  _-                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | |
LL | |
LL | | }
   | |_- this item cannot be referenced without causing an error
   |
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to allow it

warning: the where-clause bound `for<'a> Parameterized<'a>: Foo` is impossible to satisfy
  --> $DIR/bound-lifetime-in-binding-only.rs:67:19
   |
LL |   fn ok3<T>() where for<'a> Parameterized<'a>: Foo<Item=&'a i32> {
   |  _-                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | |
LL | |
LL | | }
   | |_- this item cannot be referenced without causing an error
   |
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to allow it

error: fatal error triggered by #[rustc_error]
  --> $DIR/bound-lifetime-in-binding-only.rs:73:1
   |
LL | fn main() { }
   | ^^^^^^^^^

error: aborting due to previous error; 2 warnings emitted

